--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -386,8 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "397b5c6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f951fe",
    "metadata": {},
    "outputs": [],
    "source": []
